--- a/client/src/components/login/login.module.css
+++ b/client/src/components/login/login.module.css
@@ -36,7 +36,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 12px;
     background-color: #f4f4f4;
 }
 
@@ -46,6 +46,7 @@
     border: 2px solid rgb(173, 171, 171);
     border-radius: 12px;
     background-color: #f4f4f4;
+    min-width: 200px;
 }
 
 .wrapper form input:focus{
@@ -53,7 +54,12 @@
     border-width: 2px;
     border-color: #333;
 }
-
+.error{
+    color: #f00;
+    font-style: italic;
+    margin: 4px 0;
+    font-size: 12px;
+}
 .submitBtn{
     outline: none;
     border: 1px solid transparent;
