--- a/client/src/components/register/register.module.css
+++ b/client/src/components/register/register.module.css
@@ -111,3 +111,10 @@
     top: 5rem;
     right: 5rem;
 }
+
+.error{
+    color: #f00;
+    font-style: italic;
+    margin: 4px 0;
+    font-size: 12px;
+}
